support jdk1.8